# IRIS

.windsurf/rules/: coding-guidelines.md
v1/: .env.safe  .env.template  .gitignore  ANALYSIS_SUMMARY.md  CHANGELOG.md  CODING_GUIDELINES.md  DEPLOYMENT_READY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  GROQ_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  PYTHON_VERSION_CONFIG.md  README.md  TESTING.md  config.py  deploy.sh  docker-compose.yml  error-handling.py  iris-v6-simplified.md  main.py  netlify.toml  pyproject.toml  pytest.ini  requirements.txt  test_local_provider.py  test_local_provider_direct.py
v1/config/: holehe_osint.yaml  instagram_scraper.yaml  models.yaml  profiles.yaml  sources.yaml
v1/docs/: CRAWLEE_INTEGRATION_PLAN.md  DOCKER_DEPLOYMENT.md  HOLEHE_OSINT_IMPLEMENTATION.md  INSTAGRAM_SCRAPER_DESIGN.md  INSTAGRAM_SCRAPER_IMPLEMENTATION.md  MODEL_CONFIGURATION.md  QUICKSTART.md  README.md
v1/docs/archive/: BUGFIXES_REPORT.md  GROQ_INTEGRATION_STATUS.md  GROQ_QUICKSTART.md  GROQ_SUMMARY.md  README.md  TESTING_COVERAGE.md  UNIT_TESTS_SUMMARY.md
v1/examples/: crawlee_scb_example.py  holehe_osint_example.py  instagram_scraper_example.py  model_config_examples.py
v1/src/: main.py
v1/src/core/: config.py  database.py  model_config.py  security.py
v1/src/models/: briefing.py  user.py
v1/src/services/: ai_analyzer.py  ai_analyzer_old_backup.py  data_collector.py  profile_router.py  swedish_sources.py
v1/src/services/ai_providers/: __init__.py  base.py  factory.py  groq_provider.py  local_provider.py  xai_provider.py
v1/src/services/crawlers/: __init__.py  base.py  scb_crawler.py
v1/src/services/holehe_osint/: README.md  __init__.py  models.py  service.py
v1/src/services/instagram_scraper/: README.md  __init__.py  image_downloader.py  models.py  scraper.py
v1/src/utils/: error_handling.py  model_manager_cli.py  nlp_swedish.py
v1/tests/: conftest.py  test_ai_analyzer_multi_provider.py  test_ai_providers_comprehensive.py  test_api.py  test_config.py  test_crawlee_scb.py  test_database.py  test_error_handling.py  test_groq_provider.py  test_holehe_osint.py  test_instagram_scraper.py  test_integration.py  test_local_provider_fixed.py  test_model_config.py  test_nlp.py  test_security.py  test_swedish_sources.py
