[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-v6"
version = "6.0.0"
description = "IRIS v6.0 - Förenklad och Robust Intelligensrapportering för Sverige"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IRIS Team", email = "team@iris.local"}
]
keywords = ["ai", "reporting", "swedish", "fastapi", "groq", "xai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    
    # HTTP Client
    "aiohttp==3.10.5",
    "httpx==0.27.2",
    "requests==2.32.3",
    
    # Web Scraping & Crawling
    "crawlee[all]>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4==4.12.3",
    "parsel>=1.8.1",
    
    # Database
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "aiosqlite==0.20.0",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    
    # Cache
    "redis==5.2.1",
    "hiredis==3.0.1",
    
    # AI och Language Processing
    "groq==0.11.0",
    "openai==1.52.0",
    "transformers==4.46.0",
    "sentence-transformers==3.1.1",
    "spacy==3.8.1",
    "langdetect==1.0.9",
    
    # Validering och Konfiguration
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "configparser==7.1.0",
    
    # Logging och Monitoring
    "structlog==24.4.0",
    "loguru==0.7.2",
    
    # Security
    "cryptography==43.0.1",
    "passlib==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.0",
    
    # Rate Limiting
    "slowapi==0.1.9",
    "limits==3.13.0",
    
    # Async och Utilities
    "aiofiles==24.1.0",
    "async-timeout==4.0.3",
    
    # Data Processing
    "pandas==2.2.3",
    "numpy==2.1.3",
    "polars==1.12.0",
    
    # Time and Date
    "pytz==2024.2",
    "python-dateutil==2.9.0",
    
    # Environment och OS
    "psutil==6.1.0",
    
    # JSON och Data
    "orjson==3.10.10",
    "ujson==5.10.0",
    
    # Monitoring (produktion)
    "prometheus-client==0.21.0",
    "sentry-sdk[fastapi]==2.17.0",
    
    # CORS och Middleware
    "python-multipart==0.0.12",
    
    # Deployment
    "gunicorn==23.0.0",
    
    # Health checks
    "health-check==1.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
]

[project.urls]
Homepage = "https://github.com/iris-v6"
Documentation = "https://iris-v6.readthedocs.io"
Repository = "https://github.com/iris-v6/iris.git"
"Bug Tracker" = "https://github.com/iris-v6/iris/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
timeout = 300

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]
